--- a/style.css
+++ b/style.css
@@ -2,11 +2,42 @@
     padding: .9375rem;
     display: flex;
     flex-direction: column;
-    width: 40%;
+    width: 20%;
+    margin: 3.125rem;
     border-radius: 1.875rem;
+    background-color: white;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.card img{
+    max-width: 60%;
+    border-radius: .625rem;
+    align-self: center;
+    margin-top: 1.25rem;
+    margin-bottom: .9375rem;
+}
+
+.card span{
+    margin-top: .625rem;
+    margin-bottom: .625rem;
+}
+
+.card span:first-of-type{
+    font-weight: bold;
+    text-transform: uppercase;
+    border-bottom: .0625rem solid grey;
+    padding-bottom: 1.25rem;
 }
 
 .container{
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
+}
+
+body{
+    background-color: grey;
+    font-family: 'Roboto', sans-serif;
 }
