--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
     align-items: center;
     justify-content: center;
     text-align: center;
-    min-width: 11.25rem
+    min-width: 9.375rem;
 }
 
 .card img{
